# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_executable("module_update_service") {
  install_enable = true

  sources = [
    "../../../frameworks/ipc_server/src/module_update_service.cpp",
    "../../../frameworks/ipc_server/src/module_update_stub.cpp",
    "../util/src/module_ipc_helper.cpp",
    "./main.cpp",
    "./src/crash_sys_event_listener.cpp",
    "./src/module_update_main.cpp",
    "./src/sys_event_service_listener.cpp",
  ]

  include_dirs = [
    "../../../frameworks/ipc_server/include",
    "../../../interfaces/inner_api/include",
    "./include",
  ]

  deps = [ "../../module_update:module_update_utils" ]

  external_deps = [
    "c_utils:utils",
    "hisysevent_native:libhisyseventmanager",
    "init:libbeget_proxy",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  part_name = "sys_installer"
  subsystem_name = "updater"
}
