# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/sys_installer/sys_installer_default_cfg.gni")
import("//build/ohos.gni")

sys_installer_path = rebase_path("${sys_installer_absolutely_path}", ".")
module_update_service_gen("module_update_service") {
  deps = [ "${sys_installer_path}/services/module_update/service:libmodule_update_service" ]

  part_name = "sys_installer"
  subsystem_name = "updater"
}

ohos_static_library("libmodule_update_service") {
  sources = [
    "${sys_installer_path}/frameworks/ipc_server/src/module_update_service.cpp",
    "${sys_installer_path}/frameworks/ipc_server/src/module_update_stub.cpp",
    "${sys_installer_path}/frameworks/ipc_server/src/sys_installer_callback_proxy.cpp",
    "${sys_installer_path}/services/module_update/service/main.cpp",
    "${sys_installer_path}/services/module_update/service/src/crash_sys_event_listener.cpp",
    "${sys_installer_path}/services/module_update/service/src/module_update_main.cpp",
    "${sys_installer_path}/services/module_update/service/src/sys_event_service_listener.cpp",
    "${sys_installer_path}/services/module_update/util/src/module_ipc_helper.cpp",
  ]

  include_dirs = [
    "${sys_installer_path}/common/include",
    "${sys_installer_path}/frameworks/installer_manager/include",
    "${sys_installer_path}/frameworks/ipc_server/include",
    "${sys_installer_path}/interfaces/inner_api/include",
    "${sys_installer_path}/interfaces/innerkits/ipc_client/include",
    "${sys_installer_path}/services/module_update/service/include",
  ]

  deps = [ "${sys_installer_path}/services/module_update:module_update_utils" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hisysevent:libhisyseventmanager",
    "init:libbeget_proxy",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "updater:libpackageExt",
    "updater:libupdaterlog",
    "updater:libutils",
  ]

  if (build_selinux) {
    external_deps += [ "selinux_adapter:librestorecon" ]
    cflags = [ "-DWITH_SELINUX" ]
  }

  part_name = "sys_installer"
  subsystem_name = "updater"
}
