# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/sys_installer/sys_installer_default_cfg.gni")
import("//build/test.gni")

sys_installer_path = rebase_path("${sys_installer_absolutely_path}", ".")
module_output_path = "sys_installer/sys_installer_test"

config("utest_config") {
  visibility = [ ":*" ]

  cflags = [
    "-fprofile-arcs",
    "-Wno-implicit-fallthrough",
    "-Wno-unused-function",
  ]
  cflags_cc = [ "-Wno-implicit-fallthrough" ]

  ldflags = [ "--coverage" ]
}

ohos_unittest("stream_update_unittest") {
  testonly = true
  module_out_path = module_output_path
  sources = [
    "${sys_installer_path}/services/stream_update/src/stream_update.cpp",
    "stream_update_test.cpp",
  ]

  include_dirs = [
    "${sys_installer_path}/common/include",
    "${sys_installer_path}/interfaces/innerkits",
    "${sys_installer_path}/interfaces/inner_api/include",
    "${sys_installer_path}/frameworks/actions/include",
    "${sys_installer_path}/frameworks/installer_manager/include",
    "${sys_installer_path}/frameworks/status_manager/include",
    "${sys_installer_path}/include",
    "${sys_installer_path}/services/stream_update/include",
  ]

  deps = [ "${sys_installer_path}/frameworks/status_manager:libstatusmanager" ]

  external_deps = [
    "bounds_checking_function:libsec_static",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "openssl:libcrypto_static",
    "updater:libbinchunkupdate",
    "updater:libringbuffer",
    "updater:libupdater",
    "updater:libutils",
  ]

  cflags_cc = [ "-fexceptions" ]

  defines = [
    "UPDATER_UT",
    "BUILD_OHOS",
    "HDC_DEBUG",
    "HARMONY_PROJECT",
  ]

  public_configs = [ ":utest_config" ]
  install_enable = true
  part_name = "sys_installer"
}
